samples/_failures_safe/1761594793_eff1a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c080fd6b.c: In function ‘main’:
./samples/SAFE/__tmp_c080fd6b.c:162:29: error: missing terminating " character
  162 |             fprintf(stderr, "Error: Invalid operation selection\n
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c080fd6b.c:162:13: error: expected expression at end of input
  162 |             fprintf(stderr, "Error: Invalid operation selection\n
      |             ^~~~~~~
./samples/SAFE/__tmp_c080fd6b.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c080fd6b.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c080fd6b.c:162:13: error: expected declaration or statement at end of input
